# todo_with_speckit

./: .gitignore
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
api/: .coverage  pyproject.toml
api/src/todo/application/: dtos.py  services.py
api/src/todo/domain/: entities.py  interfaces.py
api/src/todo/infrastructure/: in_memory_repository.py
api/src/todo/web/: app.py  routes.py
api/src/todo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py
api/tests/integration/: test_api.py
api/tests/unit/: test_entities.py  test_services.py
specs/001-create-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-todo/checklists/: api.md  requirements.md
specs/001-create-todo/contracts/: api.md
specs/002-styling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-styling/checklists/: requirements.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/coverage/: lcov.info
web/coverage/lcov-report/: index.html
web/src/: App.css  App.tsx  index.css
web/src/components/: AddTodoForm.css  AddTodoForm.tsx  FilterBar.css  FilterBar.tsx  TodoItem.css  TodoItem.tsx  TodoList.css  TodoList.tsx
web/src/hooks/: useTodos.ts
web/src/services/: todoService.ts
web/src/types/: todo.ts
web/tests/components/: AddTodoForm.test.tsx  App.test.tsx  (+3 more)
(+15 files in other folders)
